k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: your-docker-user/your-docker-image
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: '64Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '1'
